# mashboard

./: LICENSE  README.md  pyproject.toml
src/mashboard/: __init__.py  config.py
src/mashboard/audio/: __init__.py  player.py  sounddevice_player.py
src/mashboard/cli/: app.py
src/mashboard/core/: __init__.py  colors.py  library.py  models.py
src/mashboard/gui/: app.py
src/mashboard/storage/: __init__.py  repository.py  toml_repository.py
src/mashboard/tui/: app.py
src/soundboard/: __init__.py  config.py  settings.py
src/soundboard/audio/: __init__.py  devices.py  fetcher.py  player.py  pygame_player.py  sounddevice_player.py
src/soundboard/cli/: app.py
src/soundboard/core/: __init__.py  colors.py  library.py  models.py
src/soundboard/gui/: app.py
src/soundboard/storage/: __init__.py  repository.py  toml_repository.py
src/soundboard/tui/: app.py
tests/: test_cli.py  test_colors.py  test_devices.py  test_gui.py  test_library.py  test_settings.py  test_sounddevice_player.py  test_toml_repository.py  test_tui.py
