[project]
name = "mashboard"
version = "0.1.0"
description = "Cross-interface soundboard (CLI, TUI, desktop GUI) with a shared audio/storage core."
readme = "README.md"
authors = [
    { name = "Alessandro Costa", email = "kostola@pm.me" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["soundboard", "audio", "arcade", "cli", "tui", "gui", "meeting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "numpy>=2.4.4",
    "platformdirs>=4.9.6",
    "pyside6>=6.11.0",
    "rich>=15.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "textual>=8.2.4",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
mashboard = "mashboard.cli.app:main"
mashboard-tui = "mashboard.tui.app:main"
mashboard-gui = "mashboard.gui.app:main"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.12"
